# goit-ds-hw-03

./: authors.json  pyproject.toml  quotes.json  requirements.txt  task_1.py  task_2.py  task_2_to_db.py
